--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">    
             
-            <link rel="shortcut icon" href="/Users/brandonizaordonez/Documents/ESTUDIOS/ASIR/MARCAS/web finanzas/imagenes/registro.png" />        
+            <link rel="shortcut icon" href="imagenes/registro.png" />        
 
     </head>
 
