--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <body>
         <h1>CUIDADO CON LOS GASTOS HORMIGA</h1>
+	    <p> Comprobando el edit with Rhomel</p>
         <img src="imagenes/gastoshormiga.png" alt="hormiga" name="ferrari" 
 		width="60%" height="50%"/>
 
