--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <!--Esto es un comentario para mi-->
     <head>
-        <title>Mejora tus finanzas</title>
+        <title>vamos a por ello</title>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">    
             <meta name="description" content="Se conciente de tus ingresos y tus gastos personales" />
